# experiment-simple-requirements

./: readme.md
c/: CMakeLists.txt  main.c  readme.md
dart/: .gitignore  hello_world.dart  pubspec.yaml  readme.md
dart/request/: request.dart
dart/test/: hello_world_test.dart
elixir/: hello.exs  mix.exs  readme.md
elixir/attempt2/hello/: mix.exs
elixir/config/: config.exs
node/: package.json  readme.md  tsconfig.bak.json  tsconfig.json
node/src/: add.test.ts  add.ts  index.ts  logger.ts  parse-domain-object.ts  request.ts
rust/: Cargo.toml  readme.md
rust/src/: add.rs  logger.rs  main.rs  parse.rs  request.rs
